fixed compatibility with java 8 api